# koe-os

./: .gitignore  Cargo.toml  Makefile  out.txt  rust-toolchain.toml  rustfmt.toml  test.ustar  todo.md
.cargo/: config.toml
arch/: x86_64-unknown-none.json
initrd/: init
initrd/dir/: init.c  stuff.txt
iso/boot/: initrd
iso/boot/grub/: grub.cfg
src/: boot.S  boot.rs  bootstrap.rs  common.rs  drivers.rs  fs.rs  grub.cfg  interrupt.rs  link.ld  main.rs  mem.rs  multiboot2_header.rs  panic.rs  sched.rs  sync.rs  test.rs  usr.rs
src/arch/: x86_64.rs
src/arch/x86_64/: boot.S  boot.rs  gdt.rs  interrupt.rs  pmio.rs
src/arch/x86_64/interrupt/: handler.rs  isr.S  isr.rs  pic.rs  timer.rs
src/boot/: boot.S  memblock.rs  multiboot2_header.rs
src/bootstrap/: boot.S  multiboot2_header.rs
src/common/: array_forest.rs  ll.rs  log.rs  panic.rs  pmio.rs
src/drivers/: input.rs  ps2.rs  serial.rs  vga.rs
src/fs/: elf.rs  initramfs.rs  ustar.rs  vfs.rs
src/interrupt/: handler.S  handler.rs  irq.rs  pic.rs  timer.rs
src/interrupt/arch/: x86_64.rs
src/interrupt/arch/x86_64/: handler.rs  syscall.S  syscall.rs  timer.rs
src/io/: keyboard.rs  monitor.rs
src/mem/: addr.rs  alloc.rs  memblock.rs  page.rs  paging.rs  phy.rs  virt.rs
src/mem/alloc/: page.rs  slab.rs
src/mem/arch/: x86_64.rs
src/mem/arch/x86_64/: paging.rs
src/mem/arch/x86_64/paging/: entry.rs  table.rs
src/mem/paging/: entry.rs  table.rs
src/mem/phy/: buddy.rs  memblock.rs
src/sched/: switch.S  switch.rs  thread.rs
src/sched/arch/: x86_64.rs
src/sched/arch/x86_64/: switch.S  switch.rs
src/sync/: base.rs  spin.rs
src/usr/: mmap.rs  proc.rs  task.rs
src/usr/arch/: x86_64.rs
src/usr/arch/x86_64/: enter_usr.S  enter_usr.rs
