[package]
name = "koe-os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bitflags = "2.8.0"
bitvec = { version = "1.0.1", default-features = false }
derive_more = { version = "1.0.0", default-features = false, features = [
    "full",
] }
intrusive-collections = "0.9.7"
multiboot2 = { version = "0.23.0", default-features = false }
nonmax = { version = "0.5.5", default-features = false }
pinned-init = { version = "0.0.9", default-features = false, features = ["alloc"] }
spin = "0.9.8"
