[package]
name = "koe-os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
atomic = { version = "0.6.1", default-features = false }
bitflags = "2.8.0"
bitvec = { version = "1.0.1", default-features = false }
bytemuck = "1.23.1"
derive_more = { version = "1.0.0", default-features = false, features = [
    "full",
] }
goblin = { version = "0.9.3", default-features = false, features = ["elf64"] }
hashbrown = { version = "0.15.4", default-features = false, features = ["default-hasher"] }
intrusive-collections = "0.9.7"
multiboot2 = { version = "0.23.0", default-features = false }
no_std_io = { version = "0.6.0", features = ["alloc"] }
nonmax = { version = "0.5.5", default-features = false }
pinned-init = { version = "0.0.9", default-features = false, features = ["alloc"] }
ringbuf = { version = "0.4.7", default-features = false, features = ["alloc"] }
spin = "0.9.8"
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
strum_macros = "0.27.1"

